dll/Dll.h

WINMMAPI int WINAPI Set_Turn(int elec_name,int data);
WINMMAPI int WINAPI Set_Light(int elec_name,int data);